added banner section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fitness</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="header-section">
+            <nav class="nav-container">
+                <h1>Fitness</h1>
+                <div class="nav-options">
+                    <button class="btn-primary">Home</button>
+                    <p>Service</p>
+                    <p>Contact</p>
+                    <p>About</p>
+                </div>
+            </nav>
+            <div class="banner-container">
+                <div class="banner-text-content">
+                    <h1>Get body in <br> <span class="shape">shape</span> & stay <br> healthy</h1>
+                    <p>Fitness encompasses physical health, strength, and endurance <br> through regular exercise, balanced nutrition, and a healthy lifestyle.</p>
+                    <button class="banner-btn-1">Join Club Now!</button>
+                    <button class="banner-btn-2">Download App</button>
+                </div>
+                <div class="banner-img">
+                    <img src="images/images22.png" alt="">
+                </div>
+            </div>
+            <div class="Workout-videos">
+                <h1>500+</h1>
+                <p>Free Workout videos</p>
+            </div>
+            <div class="video-tutorial">
+                <div class="ball">
+                    <div class="triangle"></div>
+                </div>
+                <div class="ball-text">
+                    <h1>350+</h1>
+                    <p>Video tutorial</p>
+                </div>
+            </div>
+        </section>   
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
