--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/ab34ab0257.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -17,13 +18,17 @@
                     <p>Contact</p>
                     <p>About</p>
                 </div>
+                <div class="ham-burger"><i class="fa-solid fa-bars"></i>
+                </div>
             </nav>
             <div class="banner-container">
                 <div class="banner-text-content">
                     <h1>Get body in <br> <span class="shape">shape</span> & stay <br> healthy</h1>
                     <p>Fitness encompasses physical health, strength, and endurance <br> through regular exercise, balanced nutrition, and a healthy lifestyle.</p>
-                    <button class="banner-btn-1">Join Club Now!</button>
-                    <button class="banner-btn-2">Download App</button>
+                    <div class="banner-btn">
+                        <button class="banner-btn-1">Join Club Now!</button>
+                        <button class="banner-btn-2">Download App</button>
+                    </div>
                 </div>
                 <div class="banner-img">
                     <img src="images/images22.png" alt="">
