--- a/index.html
+++ b/index.html
@@ -50,7 +50,34 @@
         </section>   
     </header>
     <main>
-
+        <!-- habits section starts here -->
+        <section class="habits-container">
+            <h1>Change Your Habits</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            <div class="habits-items">
+                <div class="item-movement">
+                    <img src="images/image3.png" alt="">
+                    <h4>Movement</h4>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="item-time">
+                    <img src="images/image2.png" alt="">
+                    <h4>Time</h4>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="item-practice">
+                    <img src="images/image4.png" alt="">
+                    <h4>Practice</h4>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="item-wt-loss">
+                    <img src="images/image5.png" alt="">
+                    <h4>Weight Loss</h4>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+        <!-- habits section ends here -->
     </main>
     <footer>
 
