--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             </div>
         </section>
         <!-- habits section ends here -->
+
+        <!-- run section starts here -->
+        <section class="run-container">
+            <div class="run-text-content">
+                <h1>Run an Extra <br> Mile Easily</h1>
+                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                <button class="banner-btn-1">Join Now</button>
+            </div>
+            <div class="run-img">
+                <img src="images/run.jpg" alt="">
+            </div>
+        </section>
+        <!-- run section ends here -->
     </main>
     <footer>
 
