--- a/index.html
+++ b/index.html
@@ -91,6 +91,35 @@
             </div>
         </section>
         <!-- run section ends here -->
+
+        <!-- trainings section starts here -->
+        <section class="trainings-container">
+            <h1>Trainings and Exercises</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            <div class="row-1">
+                <div class="exercise-1">
+                    <p>Warm up</p>
+                </div>
+                <div class="exercise-2">
+                    <p>Push ups</p>
+                </div>
+                <div class="exercise-3">
+                    <p>Leg Workout</p>
+                </div>
+            </div>
+            <div class="row-2">
+                <div class="exercise-4">
+                    <p>Weight lifting</p>
+                </div>
+                <div class="exercise-5">
+                    <p>Leg Press: Works the <br> quadriceps and glutes</p>
+                </div>
+                <div class="exercise-6">
+                    <p>Sit ups</p>
+                </div>
+            </div>
+        </section>
+        <!-- trainings section ends here -->
     </main>
     <footer>
 
