--- a/index.html
+++ b/index.html
@@ -181,7 +181,46 @@
         </section>
         <!-- BMI Calculator section ends here -->
         
-        
+        <!-- meet team section starts here -->
+        <section class="meet-team-container">
+            <div class="meet-team-text">
+                <h1>Meet Our Team</h1>
+                <p>We believe fitness should be accessible to everyone everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+            <div class="trainers">
+                <div class="item">
+                    <img src="images/trainer1.png" alt="">
+                    <h4 class="trainer-name">Jerome Bell</h4>
+                    <p class="designation">Trainer</p>
+                </div>
+                <div class="item">
+                    <img src="images/trainer2.png" alt="">
+                    <h4 class="trainer-name">Cameron Williamson</h4>
+                    <p class="designation">Trainer</p>
+                </div>
+                <div class="item">
+                    <img src="images/trainer3.png" alt="">
+                    <h4 class="trainer-name">Darrell Steward</h4>
+                    <p class="designation">Trainer</p>
+                </div>
+                <div class="item">
+                    <img src="images/trainer4.png" alt="">
+                    <h4 class="trainer-name">Dianne Russell</h4>
+                    <p class="designation">Trainer</p>
+                </div>
+                <div class="item">
+                    <img src="images/trainer5.png" alt="">
+                    <h4 class="trainer-name">Cody Fisher</h4>
+                    <p class="designation">Trainer</p>
+                </div>
+                <div class="item">
+                    <img src="images/trainer6.png" alt="">
+                    <h4 class="trainer-name">Theresa Webb</h4>
+                    <p class="designation">Trainer</p>
+                </div>
+            </div>
+        </section>
+        <!-- meet team section ends here -->
     </main>
     <footer>
 
