--- a/index.html
+++ b/index.html
@@ -222,8 +222,31 @@
         </section>
         <!-- meet team section ends here -->
     </main>
-    <footer>
-
+    <footer class="footer-container">
+        <div class="footer-first-content">
+            <div class="logo-column">
+                <h1>Fitness</h1>
+                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+            </div>
+            <div class="second-column">
+                <h2>Get Started</h2>
+                <h4>Service</h4>
+                <h4>Contact Us</h4>
+                <h4>Affiliate Program</h4>
+                <h4>About Us</h4>
+            </div>
+            <div class="third-column">
+                <h2>Get Started</h2>
+                <h4>Fitness</h4>
+                <h4>Platform</h4>
+                <h4>Workout Library</h4>
+                <h4>App Design</h4>
+            </div>
+        </div>
+        <hr>
+        <div class="copyright-text">
+            <p>All right reserved @Fitness 2024</p>
+        </div>
     </footer>
 </body>
 </html>
