--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- habits section starts here -->
         <section class="habits-container">
             <h1>Change Your Habits</h1>
-            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br class="br-none"> access to a gym.</p>
             <div class="habits-items">
                 <div class="item-movement">
                     <img src="images/image3.png" alt="">
@@ -83,7 +83,7 @@
         <section class="run-container">
             <div class="run-text-content">
                 <h1>Run an Extra <br> Mile Easily</h1>
-                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                <p>We believe fitness should be accessible to everyone, <br class="br-none"> everywhere, regardless of income or access to a gym. With <br class="br-none"> hundreds of professional workouts.</p>
                 <button class="banner-btn-1">Join Now</button>
             </div>
             <div class="run-img">
@@ -112,7 +112,7 @@
                     <p>Weight lifting</p>
                 </div>
                 <div class="exercise-5">
-                    <p>Leg Press: Works the <br> quadriceps and glutes</p>
+                    <p>Leg Press: Works the <br class="br-none"> quadriceps and glutes</p>
                 </div>
                 <div class="exercise-6">
                     <p>Sit ups</p>
