fitness goals section done

--- a/index.html
+++ b/index.html
@@ -121,6 +121,40 @@
         </section>
         <!-- trainings section ends here -->
         
+        <!-- fitness goals section starts here -->
+        <section class="fitness-goals-container">
+            <div class="goals-first-column">
+                <div class="goals-title">
+                    <h5>Fitness Goals</h5>
+                </div>
+                <h1>Unlock Your Full Potential, Achieve Your Fitness Goals.</h1>
+                <div class="goals-card">
+                    <div class="goals-icon"><img src="images/goals-icon-1.png" alt="">
+                    </div>
+                    <div>
+                        <h4>Free Fitness Training</h4>
+                        <p>Pedal your way to fitness in our specialized indoor cycling studio. Equipped with stationary bikes...</p>
+                    </div>
+                </div>
+                <div class="goals-card">
+                    <div class="goals-icon"><img src="images/goals-icon-2.png" alt="">
+                    </div>
+                    <div>
+                        <h4>Cardio and Strength</h4>
+                        <p>Pedal your way to fitness in our specialized indoor cycling studio. Equipped with stationary bikes...</p>
+                    </div>
+                </div>
+                <button>Read Details</button>
+            </div>
+            <div class="goals-second-column">
+                <img src="images/goals.jpg" alt="">
+                <div class="goals-badge">
+                    <p>We Have Train More <br> Than 1580+ Students</p>
+                </div>
+            </div>
+        </section>
+        <!-- fitness goals section ends here -->
+
         <!-- BMI Calculator section starts here -->
         <section class="bmi-container">
             <div class="bmi-text-content">
