full website responsive done

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="bmi-calculator">
                     <h3>Calculate your BMI</h3>
-                    <p>Calculate your BMI to understand your body mass index and assess your healthy <br> weight range.</p>
+                    <p>Calculate your BMI to understand your body mass index and assess your healthy <br class="br-none"> weight range.</p>
                     <div class="bmi-inputs-1">
                         <input type="text" placeholder="Height/cm">
                         <input type="text" placeholder="Weight/kg">  
@@ -260,7 +260,7 @@
         <div class="footer-first-content">
             <div class="logo-column">
                 <h1>Fitness</h1>
-                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                <p>We believe fitness should be accessible to everyone, <br class="br-none"> everywhere, regardless of income or access to a gym. With <br class="br-none"> hundreds of professional workouts.</p>
             </div>
             <div class="second-column">
                 <h2>Get Started</h2>
